Fixed highlight font size on mobile

--- a/assets/styles/scss/product-module/_highlight.scss
+++ b/assets/styles/scss/product-module/_highlight.scss
@@ -56,7 +56,7 @@
         }
 
         @media screen and (max-width: 475px) {
-          font-size: 1.5rem;
+          font-size: 2.5rem;
         }
 
         &:after {
